--- a/view/menu_principal.ui
+++ b/view/menu_principal.ui
@@ -17,7 +17,7 @@
    <string notr="true">background-color: rgb(170, 170, 127);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="produccion">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -49,7 +49,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="prima">
     <property name="geometry">
      <rect>
       <x>290</x>
@@ -81,7 +81,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="registros">
     <property name="geometry">
      <rect>
       <x>580</x>
@@ -113,7 +113,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="stock">
     <property name="geometry">
      <rect>
       <x>880</x>
