--- a/view/login_menu_principal.ui
+++ b/view/login_menu_principal.ui
@@ -14,14 +14,18 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(80, 80, 60);</string>
+   <string notr="true">
+
+background-color: #ADD8E6; /* Azul Claro */
+/*background-color: rgb(80, 80, 60)
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>50</y>
+      <x>40</x>
+      <y>20</y>
       <width>901</width>
       <height>701</height>
      </rect>
@@ -39,8 +43,8 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>350</y>
+       <x>60</x>
+       <y>270</y>
        <width>141</width>
        <height>51</height>
       </rect>
@@ -65,8 +69,8 @@ border: 2px solid GREE;
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>470</y>
+       <x>50</x>
+       <y>410</y>
        <width>211</width>
        <height>51</height>
       </rect>
@@ -91,14 +95,22 @@ border: 2px solid GREE;
     <widget class="QLineEdit" name="dni">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>340</y>
+       <x>300</x>
+       <y>270</y>
        <width>411</width>
        <height>61</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="styleSheet">
       <string notr="true">border: 2px solid ORANGE;
+color: rgb(0, 0, 0);
     border-radius: 10px;</string>
      </property>
      <property name="text">
@@ -108,25 +120,40 @@ border: 2px solid GREE;
     <widget class="QLineEdit" name="id_empleado">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>460</y>
+       <x>300</x>
+       <y>400</y>
        <width>411</width>
        <height>61</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
      <property name="styleSheet">
       <string notr="true">border: 2px solid ORANGE;
+color: rgb(0, 0, 0);
     border-radius: 10px;</string>
      </property>
     </widget>
     <widget class="QPushButton" name="iniciarsesion">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>570</y>
+       <x>250</x>
+       <y>530</y>
        <width>461</width>
        <height>61</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 0);</string>
@@ -138,8 +165,8 @@ border: 2px solid GREE;
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>140</y>
+       <x>130</x>
+       <y>90</y>
        <width>681</width>
        <height>131</height>
       </rect>
@@ -166,11 +193,21 @@ border: 2px solid GREE;
     <widget class="QLabel" name="respuesta_login">
      <property name="geometry">
       <rect>
-       <x>290</x>
-       <y>650</y>
-       <width>301</width>
-       <height>41</height>
+       <x>170</x>
+       <y>620</y>
+       <width>621</width>
+       <height>71</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string/>
