--- a/view/buscarproducto.ui
+++ b/view/buscarproducto.ui
@@ -71,8 +71,8 @@ border:none;</string>
    <widget class="QPushButton" name="buscarproducto">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>90</y>
+      <x>520</x>
+      <y>60</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -97,7 +97,7 @@ border-radius: 10px</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>100</y>
+      <y>60</y>
       <width>311</width>
       <height>31</height>
      </rect>
@@ -111,8 +111,8 @@ border-radius: 8px</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>90</y>
+      <x>40</x>
+      <y>50</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -232,6 +232,57 @@ background-color: rgb(170, 170, 255);</string>
       <set>AlignCenter</set>
      </property>
     </column>
+   </widget>
+   <widget class="QLineEdit" name="codproducto_2">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>150</y>
+      <width>181</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="nuevacantidad">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>150</y>
+      <width>181</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="actualizar">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>150</y>
+      <width>121</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 255, 0);
+
+border-radius: 10px</string>
+    </property>
+    <property name="text">
+     <string>actualizar</string>
+    </property>
    </widget>
   </widget>
  </widget>
