--- a/view/almacenprima.ui
+++ b/view/almacenprima.ui
@@ -22,8 +22,8 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>40</y>
+      <x>60</x>
+      <y>30</y>
       <width>1081</width>
       <height>771</height>
      </rect>
@@ -47,10 +47,10 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>140</x>
        <y>40</y>
-       <width>191</width>
-       <height>61</height>
+       <width>151</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -71,9 +71,9 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>150</x>
        <y>120</y>
-       <width>141</width>
+       <width>121</width>
        <height>61</height>
       </rect>
      </property>
@@ -92,9 +92,9 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>90</x>
-       <y>210</y>
-       <width>191</width>
+       <x>690</x>
+       <y>10</y>
+       <width>111</width>
        <height>61</height>
       </rect>
      </property>
@@ -113,9 +113,9 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>90</x>
-       <y>300</y>
-       <width>181</width>
+       <x>660</x>
+       <y>100</y>
+       <width>151</width>
        <height>61</height>
       </rect>
      </property>
@@ -128,16 +128,16 @@
       </font>
      </property>
      <property name="text">
-      <string>CANTIDAD PRODUCTO:</string>
+      <string>CANTIDAD PRODUCTO</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>390</y>
-       <width>161</width>
-       <height>61</height>
+       <x>420</x>
+       <y>230</y>
+       <width>111</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -158,7 +158,7 @@
        <x>290</x>
        <y>40</y>
        <width>231</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -169,10 +169,10 @@ Border-radius: 18px</string>
     <widget class="QLineEdit" name="codmaterial">
      <property name="geometry">
       <rect>
-       <x>290</x>
-       <y>210</y>
+       <x>800</x>
+       <y>20</y>
        <width>231</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -183,10 +183,10 @@ Border-radius: 18px</string>
     <widget class="QLineEdit" name="canprod">
      <property name="geometry">
       <rect>
-       <x>290</x>
-       <y>300</y>
+       <x>810</x>
+       <y>110</y>
        <width>231</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -197,10 +197,10 @@ Border-radius: 18px</string>
     <widget class="QLineEdit" name="codemple">
      <property name="geometry">
       <rect>
-       <x>290</x>
-       <y>390</y>
+       <x>550</x>
+       <y>230</y>
        <width>231</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -214,7 +214,7 @@ Border-radius: 18px</string>
        <x>290</x>
        <y>130</y>
        <width>231</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -311,10 +311,10 @@ Border-radius: 18px</string>
     <widget class="QPushButton" name="registrar">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>30</y>
+       <x>180</x>
+       <y>360</y>
        <width>161</width>
-       <height>71</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -327,10 +327,10 @@ Border-radius: 18px</string>
     <widget class="QPushButton" name="cancelar">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>90</y>
+       <x>470</x>
+       <y>360</y>
        <width>161</width>
-       <height>71</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -343,10 +343,10 @@ Border-radius: 18px</string>
     <widget class="QPushButton" name="regresar2">
      <property name="geometry">
       <rect>
-       <x>900</x>
-       <y>370</y>
+       <x>780</x>
+       <y>360</y>
        <width>171</width>
-       <height>71</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -359,10 +359,10 @@ Border-radius: 18px</string>
     <widget class="QPushButton" name="buscarmaterial">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>180</y>
-       <width>171</width>
-       <height>61</height>
+       <x>190</x>
+       <y>250</y>
+       <width>141</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -376,9 +376,9 @@ Border-radius: 18px</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>460</x>
       <y>0</y>
-      <width>281</width>
+      <width>251</width>
       <height>41</height>
      </rect>
     </property>
