--- a/view/login_menu_principal.ui
+++ b/view/login_menu_principal.ui
@@ -14,18 +14,15 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">
-
-background-color: #ADD8E6; /* Azul Claro */
-/*background-color: rgb(80, 80, 60)
+   <string notr="true">background-color: rgb(153, 155, 255);
 </string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>20</y>
+      <x>140</x>
+      <y>0</y>
       <width>901</width>
       <height>701</height>
      </rect>
@@ -37,24 +34,28 @@ background-color: #ADD8E6; /* Azul Claro */
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(114, 145, 255);
+border-radius: 25px</string>
+    </property>
     <property name="title">
      <string/>
     </property>
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>270</y>
-       <width>141</width>
-       <height>51</height>
+       <x>420</x>
+       <y>190</y>
+       <width>91</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
+       <pointsize>16</pointsize>
+       <weight>50</weight>
        <italic>true</italic>
-       <bold>true</bold>
+       <bold>false</bold>
       </font>
      </property>
      <property name="styleSheet">
@@ -66,39 +67,13 @@ border: 2px solid GREE;
       <string>usuario</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>410</y>
-       <width>211</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>20</pointsize>
-       <weight>75</weight>
-       <italic>true</italic>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border-image: url(:/cct2/sticker-png-security-key-lock-and-key-user-password-bookmark-logo.png);
-border: 2px solid GREE;
-    border-radius: 10px;</string>
-     </property>
-     <property name="text">
-      <string>contraseña</string>
-     </property>
-    </widget>
     <widget class="QLineEdit" name="dni">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>270</y>
-       <width>411</width>
-       <height>61</height>
+       <x>330</x>
+       <y>240</y>
+       <width>271</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
@@ -110,6 +85,7 @@ border: 2px solid GREE;
      </property>
      <property name="styleSheet">
       <string notr="true">border: 2px solid ORANGE;
+background-color: rgb(255, 255, 255);
 color: rgb(0, 0, 0);
     border-radius: 10px;</string>
      </property>
@@ -117,46 +93,27 @@ color: rgb(0, 0, 0);
       <string/>
      </property>
     </widget>
-    <widget class="QLineEdit" name="id_empleado">
-     <property name="geometry">
-      <rect>
-       <x>300</x>
-       <y>400</y>
-       <width>411</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">border: 2px solid ORANGE;
-color: rgb(0, 0, 0);
-    border-radius: 10px;</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="iniciarsesion">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>530</y>
-       <width>461</width>
-       <height>61</height>
+       <x>380</x>
+       <y>400</y>
+       <width>191</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <pointsize>14</pointsize>
        <weight>75</weight>
+       <italic>true</italic>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(170, 170, 0);</string>
+      <string notr="true">background-color: rgb(28, 8, 255);
+color: rgb(255, 255, 255);
+border-radius: 8px</string>
      </property>
      <property name="text">
       <string>iniciar sesion</string>
@@ -165,10 +122,10 @@ color: rgb(0, 0, 0);
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>90</y>
-       <width>681</width>
-       <height>131</height>
+       <x>150</x>
+       <y>20</y>
+       <width>581</width>
+       <height>81</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -182,9 +139,15 @@ color: rgb(0, 0, 0);
        <family>Lucida Fax</family>
        <pointsize>30</pointsize>
        <weight>75</weight>
-       <italic>false</italic>
+       <italic>true</italic>
        <bold>true</bold>
+       <underline>true</underline>
+       <strikeout>false</strikeout>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+</string>
      </property>
      <property name="text">
       <string>PELUCHEANDO LA ZONA</string>
@@ -211,6 +174,55 @@ color: rgb(0, 0, 0);
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>290</y>
+       <width>121</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+       <weight>50</weight>
+       <italic>true</italic>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/cct2/sticker-png-security-key-lock-and-key-user-password-bookmark-logo.png);
+border: 2px solid GREE;
+    border-radius: 10px;</string>
+     </property>
+     <property name="text">
+      <string>contraseña</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="id_empleado">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>340</y>
+       <width>271</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid ORANGE;
+background-color: rgb(255, 255, 255);
+color: rgb(0, 0, 0);
+    border-radius: 10px;</string>
      </property>
     </widget>
    </widget>
