--- a/view/menu_principal.ui
+++ b/view/menu_principal.ui
@@ -27,7 +27,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color: rgb(33, 55, 175);</string>
     </property>
     <property name="text">
      <string/>
@@ -59,7 +59,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color: rgb(118, 106, 255);</string>
     </property>
     <property name="text">
      <string/>
@@ -91,7 +91,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color: rgb(44, 88, 0);</string>
     </property>
     <property name="text">
      <string/>
@@ -123,7 +123,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background-color: rgb(206, 206, 206);</string>
     </property>
     <property name="text">
      <string/>
@@ -154,10 +154,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>20</y>
-      <width>691</width>
-      <height>81</height>
+      <x>320</x>
+      <y>30</y>
+      <width>551</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -178,10 +178,11 @@
     padding: 10px; /* Añadir espacio alrededor del texto */
     border-radius: 15px; /* Bordes redondeados */
     qproperty-alignment: 'AlignCenter';
-background-color: rgb(85, 170, 255);</string>
+background-color: rgb(85, 170, 255);
+color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
-     <string>Pelucheando La Zona</string>
+     <string>PeLuChEaNdO La ZoNa</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -202,7 +203,7 @@ background-color: rgb(85, 170, 255);</string>
  border-radius: 12px;</string>
     </property>
     <property name="text">
-     <string>producción</string>
+     <string>Producción</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
@@ -224,7 +225,7 @@ background-color: rgb(235, 235, 176);
  border-radius: 12px;</string>
     </property>
     <property name="text">
-     <string>almacén_prima</string>
+     <string>Almacén Prima</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -246,7 +247,7 @@ background-color: rgb(235, 235, 176);
  border-radius: 12px;</string>
     </property>
     <property name="text">
-     <string>registros</string>
+     <string>Registros</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -268,17 +269,21 @@ background-color: rgb(235, 235, 176);
  border-radius: 12px;</string>
     </property>
     <property name="text">
-     <string>stock</string>
+     <string>Stock</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>130</y>
+      <y>100</y>
       <width>481</width>
-      <height>311</height>
+      <height>341</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(31, 163, 203);
+border-radius: 35px</string>
     </property>
     <property name="text">
      <string/>
