--- a/view/produccionregistrar.ui
+++ b/view/produccionregistrar.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1065</width>
+    <width>1117</width>
     <height>796</height>
    </rect>
   </property>
@@ -144,7 +144,7 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>90</x>
       <y>40</y>
       <width>961</width>
       <height>371</height>
@@ -156,9 +156,9 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>120</x>
        <y>20</y>
-       <width>91</width>
+       <width>61</width>
        <height>20</height>
       </rect>
      </property>
@@ -176,9 +176,9 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>160</y>
-       <width>131</width>
+       <x>600</x>
+       <y>20</y>
+       <width>111</width>
        <height>31</height>
       </rect>
      </property>
@@ -197,8 +197,8 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>90</y>
+       <x>90</x>
+       <y>70</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -221,9 +221,9 @@
     <widget class="QLineEdit" name="codpro">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>20</y>
-       <width>461</width>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -236,8 +236,8 @@ border: 2px solid black;</string>
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>100</y>
-       <width>461</width>
+       <y>70</y>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -250,8 +250,8 @@ border: 2px solid black;</string>
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>60</y>
-       <width>461</width>
+       <y>120</y>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -263,9 +263,9 @@ border: 2px solid black;</string>
     <widget class="QLineEdit" name="codemple">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>130</y>
-       <width>461</width>
+       <x>730</x>
+       <y>80</y>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -278,7 +278,7 @@ border: 2px solid black;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>50</y>
+       <y>120</y>
        <width>181</width>
        <height>31</height>
       </rect>
@@ -301,8 +301,8 @@ border: 2px solid black;</string>
     <widget class="QLabel" name="label_9">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>130</y>
+       <x>580</x>
+       <y>80</y>
        <width>141</width>
        <height>21</height>
       </rect>
@@ -325,7 +325,7 @@ border: 2px solid black;</string>
     <widget class="QPushButton" name="regresar">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>290</x>
        <y>310</y>
        <width>131</width>
        <height>41</height>
@@ -343,7 +343,8 @@ border: 2px solid black;</string>
       <string notr="true">background-color: rgb(235, 237, 232);
 border: 2px solid black;
     border-radius: 20px;
-    padding: 8px;</string>
+    padding: 8px;
+background-color: rgb(255, 0, 0);</string>
      </property>
      <property name="text">
       <string>REGRESAR</string>
@@ -352,8 +353,8 @@ border: 2px solid black;
     <widget class="QPushButton" name="registrarproduccion">
      <property name="geometry">
       <rect>
-       <x>390</x>
-       <y>310</y>
+       <x>500</x>
+       <y>240</y>
        <width>131</width>
        <height>41</height>
       </rect>
@@ -370,7 +371,8 @@ border: 2px solid black;
       <string notr="true">background-color: rgb(215, 219, 210);
 border: 2px solid black;
     border-radius: 20px;
-    padding: 8px;</string>
+    padding: 8px;
+background-color: rgb(0, 153, 0);</string>
      </property>
      <property name="text">
       <string>AGREGAR</string>
@@ -379,7 +381,7 @@ border: 2px solid black;
     <widget class="QPushButton" name="cancelarprod">
      <property name="geometry">
       <rect>
-       <x>690</x>
+       <x>710</x>
        <y>310</y>
        <width>141</width>
        <height>41</height>
@@ -397,7 +399,8 @@ border: 2px solid black;
       <string notr="true">border: 2px solid black;
 background-color: rgb(235, 237, 232);
     border-radius: 20px;
-    padding: 8px;</string>
+    padding: 8px;
+background-color: rgb(255, 170, 0);</string>
      </property>
      <property name="text">
       <string>CANCELAR</string>
@@ -406,9 +409,9 @@ background-color: rgb(235, 237, 232);
     <widget class="QLineEdit" name="codmaterial">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>170</y>
-       <width>461</width>
+       <x>730</x>
+       <y>20</y>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -420,8 +423,8 @@ border: 2px solid black;</string>
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>210</y>
+       <x>600</x>
+       <y>130</y>
        <width>131</width>
        <height>31</height>
       </rect>
@@ -441,9 +444,9 @@ border: 2px solid black;</string>
     <widget class="QLineEdit" name="codproducto">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>210</y>
-       <width>461</width>
+       <x>730</x>
+       <y>130</y>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -455,10 +458,10 @@ border: 2px solid black;</string>
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>250</y>
+       <x>10</x>
+       <y>170</y>
        <width>191</width>
-       <height>41</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
@@ -480,8 +483,8 @@ border: 2px solid black;</string>
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>250</y>
-       <width>461</width>
+       <y>170</y>
+       <width>211</width>
        <height>31</height>
       </rect>
      </property>
@@ -494,9 +497,9 @@ border: 2px solid black;</string>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>460</x>
       <y>0</y>
-      <width>511</width>
+      <width>271</width>
       <height>21</height>
      </rect>
     </property>
@@ -522,8 +525,8 @@ border: 2px solid black;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1065</width>
-     <height>26</height>
+     <width>1117</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
